새로 만든 서버로부터 잘 응답하도록 수정
수정 후 확인한 사항
 * 회원가입
 * 로그인
 * 유저의 과목정보 받아오기
 * 과목 검색하기

해야하는 것
 * 받아온 것 리스트 뷰로 보여주기
 * 과목 디테일하게 보여주기

--- a/res/layout/activity_detail_subject.xml
+++ b/res/layout/activity_detail_subject.xml
@@ -48,7 +48,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/professorName"
+        android:id="@+id/lecturer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
