--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,6 +19,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+" />
+        
+        <ListView 
+            android:id="@+id/subjectListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:context=".MainActivity" />
 
         <ScrollView
             android:id="@+id/scrollView1"
