이름 바꾸고 자잘한 것 수정
아직 푸시 해제가 안 됨 (기기 문제 같음)
xml에서 경고가 없도록 스트링 리소스로 다 바꿈
여러 경고문구 수정과 내 메일 주소 첨부

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="115dp"
         android:ems="10"
         android:hint="@string/hint_student_number"
-        android:inputType="numberSigned" >
+        android:inputType="text" >
 
         <requestFocus />
     </EditText>
