--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -72,4 +72,13 @@
         android:layout_marginTop="100dp"
         android:text="@string/unregister" />
 
+    <TextView
+        android:id="@+id/developer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:gravity="right"
+        android:text="@string/developer" />
+
 </RelativeLayout>
