레브레로 임시 오픈
UTF-8로 바뀐 영향 제거

--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -58,7 +58,7 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/register"
+        android:id="@+id/registerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/passwordConfirm"
