--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         
-        android:id="@+id/atferLogin"
+        android:id="@+id/atfer_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -16,7 +16,7 @@
         android:orientation="vertical" >
 
 	    <LinearLayout
-	        android:id="@+id/linlaHeaderProgress"
+	        android:id="@+id/linla_header_progress"
 	        android:layout_width="fill_parent"
 	        android:layout_height="fill_parent"
 	        android:gravity="center"
@@ -32,13 +32,13 @@
 	    </LinearLayout>
 	    
         <Button
-            android:id="@+id/findButton"
+            android:id="@+id/find_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_subject" />
         
         <ListView 
-            android:id="@+id/subjectListView"
+            android:id="@+id/subject_list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".MainActivity" />
@@ -46,7 +46,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/login_button"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -55,20 +55,20 @@
         android:text="@string/sign_in" />
 
     <Button
-        android:id="@+id/registerButton"
+        android:id="@+id/register_button"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/loginButton"
+        android:layout_alignTop="@+id/login_button"
         android:layout_marginTop="50dp"
         android:text="@string/sign_up" />
 
     <Button
-        android:id="@+id/unregisterButton"
+        android:id="@+id/unregister_button"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/registerButton"
+        android:layout_alignTop="@+id/register_button"
         android:layout_marginTop="100dp"
         android:text="@string/unregister" />
 
