--- a/res/layout/activity_find_subject.xml
+++ b/res/layout/activity_find_subject.xml
@@ -35,7 +35,7 @@
         android:visibility="gone" >
 
         <ProgressBar
-            android:id="@+id/pbHeaderProgress"
+            android:id="@+id/pb_header_progress"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
