--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,13 +5,10 @@
     tools:context="${relativePackage}.${activityClass}" >
 
     <LinearLayout
-        
         android:id="@+id/atfer_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
@@ -24,7 +21,7 @@
 	        android:visibility="visible" >
 
 	        <ProgressBar
-	            android:id="@+id/pbHeaderProgress"
+	            android:id="@+id/pb_header_progress"
 	            style="?android:attr/progressBarStyleLarge"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content" >
@@ -42,43 +39,48 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".MainActivity" />
-
     </LinearLayout>
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:text="@string/sign_in" />
+    <RelativeLayout 
+        android:id="@+id/before_login"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/register_button"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/login_button"
-        android:layout_marginTop="50dp"
-        android:text="@string/sign_up" />
-
-    <Button
-        android:id="@+id/unregister_button"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignTop="@+id/register_button"
-        android:layout_marginTop="100dp"
-        android:text="@string/unregister" />
-
-    <TextView
-        android:id="@+id/developer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:gravity="right"
-        android:text="@string/developer" />
+	    <Button
+	        android:id="@+id/login_button"
+	        android:layout_width="120dp"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentTop="true"
+	        android:layout_centerHorizontal="true"
+	        android:layout_marginTop="100dp"
+	        android:text="@string/sign_in" />
+	
+	    <Button
+	        android:id="@+id/register_button"
+	        android:layout_width="120dp"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:layout_alignTop="@+id/login_button"
+	        android:layout_marginTop="50dp"
+	        android:text="@string/sign_up" />
+	
+	    <Button
+	        android:id="@+id/unregister_button"
+	        android:layout_width="120dp"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:layout_alignTop="@+id/register_button"
+	        android:layout_marginTop="100dp"
+	        android:text="@string/unregister" />
+	
+	    <TextView
+	        android:id="@+id/developer"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentBottom="true"
+	        android:layout_alignParentRight="true"
+	        android:gravity="right"
+	        android:text="@string/developer" />        
+    </RelativeLayout>
 
 </RelativeLayout>
