--- a/res/layout/activity_detail_subject.xml
+++ b/res/layout/activity_detail_subject.xml
@@ -34,6 +34,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
         
         <TextView
+            android:id="@+id/class_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+        
+        <TextView
             android:id="@+id/capacity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
