--- a/res/layout/subject_listview_content.xml
+++ b/res/layout/subject_listview_content.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:padding="5sp"
-        android:text="aaa"
+        android:text="name"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -21,7 +21,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/subject_name"
         android:padding="3sp"
-        android:text="aaa"
+        android:text="subject_number"
         android:textSize="12sp" />
 
     <TextView
@@ -32,7 +32,17 @@
         android:layout_alignBottom="@+id/subject_number"
         android:layout_toRightOf="@+id/subject_number"
         android:padding="3sp"
-        android:text="aaa"
+        android:text="lecturer"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/class_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/subject_number"
+        android:padding="3sp"
+        android:text="class_time"
         android:textSize="12sp" />
 
 </RelativeLayout>
