--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -65,6 +65,6 @@
         android:layout_alignRight="@+id/password_confirm"
         android:layout_below="@+id/password_confirm"
         android:layout_marginTop="30dp"
-        android:text="@string/sign_up" />
+        android:text="@string/sign_up_button" />
 
 </RelativeLayout>
