--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -41,46 +41,72 @@
             tools:context=".MainActivity" />
     </LinearLayout>
 
-    <RelativeLayout 
+    <RelativeLayout
         android:id="@+id/before_login"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-	    <Button
-	        android:id="@+id/login_button"
-	        android:layout_width="120dp"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentTop="true"
-	        android:layout_centerHorizontal="true"
-	        android:layout_marginTop="100dp"
-	        android:text="@string/sign_in_button" />
-	
-	    <Button
-	        android:id="@+id/register_button"
-	        android:layout_width="120dp"
-	        android:layout_height="wrap_content"
-	        android:layout_centerHorizontal="true"
-	        android:layout_alignTop="@+id/login_button"
-	        android:layout_marginTop="50dp"
-	        android:text="@string/sign_up_button" />
-	
-	    <Button
-	        android:id="@+id/unregister_button"
-	        android:layout_width="120dp"
-	        android:layout_height="wrap_content"
-	        android:layout_centerHorizontal="true"
-	        android:layout_alignTop="@+id/register_button"
-	        android:layout_marginTop="100dp"
-	        android:text="@string/unregister_button" />
-	
-	    <TextView
-	        android:id="@+id/developer"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentBottom="true"
-	        android:layout_alignParentRight="true"
-	        android:gravity="right"
-	        android:text="@string/developer" />        
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="60dp"
+            android:text="스누줍 (SNUJoob)"
+            android:textSize="40sp"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/register_button"
+            android:layout_alignStart="@+id/register_button"
+            android:layout_below="@+id/title"
+            android:layout_marginTop="50dp"
+            android:text="@string/sign_in_button" />
+        
+        <Button
+            android:id="@+id/register_button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/login_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:text="@string/sign_up_button" />
+
+        <Button
+            android:id="@+id/unregister_button"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/register_button"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
+            android:text="@string/unregister_button" />
+
+        <TextView
+            android:id="@+id/explaination"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="20dp"
+            android:layout_below="@+id/unregister_button"
+            android:layout_marginTop="20dp"
+            android:text="스누줍은 수강신청할 과목에서 빈 자리가 나면 푸시알림을 주는 서비스 입니다. 와플스튜디오의 사람이 만들었습니다. * 디자이너를 찾습니다. 아래 이메일로 문의주세요." />
+
+        <TextView
+            android:id="@+id/developer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:gravity="end"
+            android:text="@string/developer" />
     </RelativeLayout>
 
 </RelativeLayout>
