--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -29,7 +29,8 @@
         android:layout_marginTop="115dp"
         android:ems="10"
         android:hint="@string/hint_student_number"
-        android:inputType="text" >
+        android:inputType="text"
+        android:singleLine="true" >
 
         <requestFocus />
     </EditText>
@@ -39,30 +40,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/student_number"
+        android:layout_alignStart="@+id/student_number"
         android:layout_below="@+id/student_number"
         android:layout_marginTop="30dp"
         android:ems="10"
         android:hint="@string/hint_password"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:singleLine="true" />
 
     <EditText
         android:id="@+id/password_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/password"
+        android:layout_alignStart="@+id/password"
         android:layout_alignRight="@+id/password"
+        android:layout_alignEnd="@+id/password"
         android:layout_below="@+id/password"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/hint_password_confirm"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:singleLine="true" />
 
     <Button
         android:id="@+id/register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/password_confirm"
+        android:layout_alignStart="@+id/password_confirm"
         android:layout_alignRight="@+id/password_confirm"
+        android:layout_alignEnd="@+id/password_confirm"
         android:layout_below="@+id/password_confirm"
         android:layout_marginTop="30dp"
         android:text="@string/sign_up_button" />
