--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+<resources>FF82AC
+    <color name="colorPrimary">#FF82AC</color>
+    <color name="colorPrimaryDark">#F06292</color>
+    <color name="colorAccent">#62F06F</color>
+    <color name="windowBackground">#F2F2F2</color>
 </resources>
