--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,13 +46,13 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp" />
 
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/lecture_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp">
 
-            </ListView>
+            </android.support.v7.widget.RecyclerView>
 
         </LinearLayout>
 
